<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:background="@color/baby_green"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/education"
            android:contentDescription="@string/logo_desc" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal">
        <TextView
            android:text="Lets start learning and haveing fun"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@color/dark_green"
            android:textStyle="bold"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/mathImageView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:contentDescription="@string/math_description"

            android:src="@drawable/math" />


        <ImageView
            android:id="@+id/EnglishImageView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:contentDescription="@string/english_description"

            android:src="@drawable/english"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <Button
            android:id="@+id/mathButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/math_course"/>
        <Button
            android:id="@+id/englishButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/english_course"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/dark_green"
            android:textColor="@color/white"
            android:text="@string/back"
            android:textSize="15sp" />

        <Button
            android:id="@+id/test"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/dark_green"
            android:text="  Test   yourself "
            android:textColor="@color/white"
            android:textSize="15sp" />

    </TableRow>

</TableLayout>
